fix footer aligment on mobile

--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -18,8 +18,7 @@
 .footer-columns {
   display: grid;
 
-  // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-columns: 3fr 1fr 2fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
   margin-bottom: 40px;
 }
